# conductor-max

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
src/: main.rs
src/orchestrator/: agent_manager.rs  ipc_bridge.rs  mod.rs  session_state.rs
ui/: agent.html  conductor-max.js  index.html  strategy.html  styles.css
