[package]
name = "conductor-max"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools", "unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
dashmap = "6"
futures = "0.3"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
tokio-util = { version = "0.7", features = ["codec"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
incremental = false
